deployment/pollsapi.yml
apiVersion: v1
kind: Service
metadata:
  name: polls-api
spec:
  type: NodePort
  ports:
  - name: polls-api
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: pollsapi

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: polls-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: polls-api
        app: pollsapi
    spec:
      containers:
      - name: polls-api
        image: gcr.io/shopnet-216516/pollsapi
        resources:
          requests:
            cpu: 125m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        imagePullPolicy: Always
        ports:
        - name: polls-test-api
          containerPort: 8000
          protocol: TCP
